microwebapp.yaml
######################
# microweb-service   #
######################
---
apiVersion: v1
kind: Service
metadata:
  name: microweb-svc
  namespace: default
  labels:
    app: microweb-svc
spec:
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    protocol: TCP
    # targetPort: 80
  selector:
    # selector.app must be same as deploy app name
    app: microweb
  type: NodePort
---
######################
# microweb-deploy    #
######################
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: microweb-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        # same as service selector.app
        app: microweb
    spec:
      containers:
      - name: microweb-webui
        image: xinyaotian/microwebapp:0.0.1
        ports:
        - containerPort: 80
---
